--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 
-node_modules/.package-lock.json
-node_modules/fs/package.json
-node_modules/fs/README.md
+node_modules
 package-lock.json
-package.json
