--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
     "mineflayer": "^4.1.0"
   }
