--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "colors": "^1.4.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "flying-squid": "^1.5.0",
     "fs": "^0.0.1-security",
     "mineflayer": "^4.1.0"
   }
