--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.0",
     "flying-squid": "^1.5.0",
     "fs": "^0.0.1-security",
-    "mineflayer": "^4.1.0"
+    "mineflayer": "^4.1.0",
+    "mongodb": "^4.4.1"
   }
 }
