more fixing soon

--- a/settings/config.json
+++ b/settings/config.json
@@ -2,7 +2,7 @@
   "prefix": ".",
   "discord": true,
   "minecraft": false,
-  "test": true,
+  "test": false,
   "time": {
     "database": false
   }
