--- a/settings/config.json
+++ b/settings/config.json
@@ -1,7 +1,7 @@
 {
   "prefix": ".",
   "discord": true,
-  "minecraft": false,
+  "minecraft": true,
   "test": true,
   "time": {
     "database": false
