--- a/settings/config.json
+++ b/settings/config.json
@@ -2,9 +2,10 @@
   "prefix": ".",
   "discord": true,
   "minecraft": false,
-  "test": false,
+  "test": true,
   "time": {
     "database": false,
+    "gmembers": false,
     "sniper": false,
     "finder": false
   }
