--- a/settings/config.json
+++ b/settings/config.json
@@ -1,10 +1,9 @@
 {
   "prefix": ".",
-  "discord": true,
   "minecraft": false,
-  "test": true,
+  "test": false,
   "time": {
-    "database": false,
+    "database": true,
     "gmembers": false,
     "sniper": false,
     "finder": false
