--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.0.0",
     "flying-squid": "^1.5.0",
     "fs": "^0.0.1-security",
-    "mongodb": "^4.4.1"
+    "mongodb": "^4.4.1",
+    "request": "^2.88.2"
   }
 }
