--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
     "colors": "^1.4.0",
     "cron": "^1.8.2",
     "discord.js": "^13.6.0",
