--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ package-lock.json
 .env
 .DS_Store
 settings/cache
+settings/cache/lb.json
+settings/cache/lb.json
+settings/cache/lb.json
+settings/cache/gexp.json
