--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ settings/cache/lb.json
 settings/cache/lb.json
 settings/cache/lb.json
 settings/cache/gexp.json
+settings/cache/gexp.json
+settings/cache/lb.json
