--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ settings/cache/lb.json
 settings/cache/gexp.json
 settings/cache/gexp.json
 settings/cache/lb.json
+discord/commands/farmanstest.js
