--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "uhg-bot",
+  "version": "3.0.0",
+  "description": "Hypixel minecraft & discord bot for UHG",
+  "main": "./index.js",
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "colors": "^1.4.0",
