--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@discordjs/builders": "^0.12.0",
     "colors": "^1.4.0",
     "cron": "^1.8.2",
+    "discord-modals": "^1.3.7",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.0",
     "flying-squid": "^1.5.0",
