--- a/settings/config.json
+++ b/settings/config.json
@@ -2,6 +2,7 @@
     "prefix": ".",
     "minecraft": true,
     "test": false,
+    "deleteverify": true,
     "time": {
         "database": true,
         "finder": true,
