--- a/settings/config.json
+++ b/settings/config.json
@@ -9,6 +9,7 @@
         "elites": true,
         "guildinfo": true,
         "uhgrole": true,
+        "loot": false,
         "sniper": false,
         "bwroles": true
     },
